--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "bytekode-eth-decoder": "^1.0.5",
+    "crypto": "^1.0.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "ethers": "^5.7.2",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
