--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "bytekode-eth-decoder": "^1.0.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "ethers": "^5.7.2",
+    "express": "^4.18.2",
     "next": "13.4.4",
+    "pg": "^8.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "typescript": "5.1.3"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/pg": "^8.10.2",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
